# VeloGraph

./: .gitignore  .pre-commit-config.yaml  NOTICE  README.md  ROADMAP.md  docker-compose.yml  docker_build.sh  pyproject.toml  requirements.txt  ruff.toml
app/: __main__.py  (+1 more)
backend/: Dockerfile  __main__.py  alembic.ini  config.py  docker_entrypoint.sh  main.py  pyproject.toml  requirements.txt
backend/api/: schemas.py
backend/api/routes/: bikes.py
backend/core/: constants.py  db.py  elasticsearch.py  models.py  utils.py
backend/migrations/: README.md  env.py  script.py.mako
backend/migrations/versions/: 13bf03f5c6f6_initial_migration.py  7e62683efbc4_increase_material_length_to_100.py  991031c52543_add_frameset_category.py  9f40e69e09fb_update_unique_key.py  b3b1fc3d67ef_initial.py  b8641691a825_initial.py  c1b480bb574e_initial_combined_migration.py  d30f598bc1c0_align_orm_structure_with_cascades.py
backend/scripts/: base_extractor.py  draw_frameset.py  populate_db.py  populate_es.py  run_all.py  schemas.py
backend/scripts/base/: __init__.py  base_crawler.py  base_downloader.py  base_extractor.py  base_populator.py  crawler.py  extractor.py
backend/scripts/crawlers/: base.py
backend/scripts/kross/: crawler.py  download_kross_bikes.py  extract_kross_bikes_data.py  extractor.py  kross_crawler.py  kross_downloader.py  kross_extractor.py  kross_populator.py  populate_db.py
backend/scripts/trek/: crawler.py  download_trek_bikes.py  extract_trek_bikes_data.py  extractor.py  populator.py  trek_crawler.py  trek_downloader.py  trek_extractor.py  trek_populator.py
backend/tests/: conftest.py
backend/tests/integration/: test_bikes_api.py
backend/utils/: helpers.py  logging.py  svg_renderer.py
(+47 files in other folders)
