[project]
name = "velograph"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "elasticsearch[async]>=9.2.1",
    "fastapi>=0.128.0",
    "loguru>=0.7.3",
    "playwright>=1.58.0",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.40.0",
]
readme = "README.md"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.14.14",
]
