[project]
name = "velograph"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.3",
    "beautifulsoup4>=4.14.3",
    "elasticsearch[async]>=9.2.1",
    "fastapi>=0.128.0",
    "loguru>=0.7.3",
    "lxml>=6.0.2",
    "playwright>=1.58.0",
    "psycopg2>=2.9.11",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.12.0",
    "selectolax>=0.4.6",
    "sqlalchemy>=2.0.46",
    "svgwrite>=1.4.3",
    "tenacity>=9.1.4",
    "uvicorn>=0.40.0",
]
readme = "README.md"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]
